# projet_Lo21

./: CMakeLists.txt  README.md  main.c  regles.c
headers/: Base_faits.h  Bases_Connaissances.h  Moteur_inference.h  menu.h  regles.h
sources/: Base_faits.c  Bases_Connaissances.c  Moteur_inference.c  main.c  menu.c  regles.c
